2007-05-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/encoding-dialog.glade:
	Save with Glade 3.

	* gaupol/enclib.py (get_description):
	Add missing method.

	* gaupol/gtk/dialogs/encoding.py:
	Add contracts and clean up code.

2007-05-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/previewerr-dialog.glade:
	Set 6 pixel margins to the text view.

	* gaupol/gtk/dialogs/previewerr.py:
	Use util.get_text_view_size.

	* gaupol/gtk/util.py (get_text_view_size):
	Add font argument with a blank default value.

2007-05-24  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/glade/language-dialog.glade:
	Use gtk.Alignments to indent sections.

	* gaupol/gtk/dialogs/glade.py:
	* gaupol/gtk/dialogs/language.py:
	* gaupol/gtk/dialogs/message.py:
	* gaupol/gtk/dialogs/textedit.py:
	Add contracts and clean up code.

2007-05-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/output.py:
	Set 6 pixel margins to the text view.

2007-05-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/icons/logo.png:
	Remove file, use icon instead.

	* gaupol/gtk/dialogs/about.py:
	Add title, fix website label and use a named icon.

	* gaupol/gtk/dialogs/__init__.py:
	Comment out imports for now.

	* gaupol/urls.py (HOMEPAGE):
	Add trailing slash.

2007-05-23  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/agents/register.py:
	* gaupol/agents/search.py:
	* gaupol/base/delegate.py:
	* gaupol/base/__init__.py:
	* gaupol/base/mutables.py:
	* gaupol/base/observable.py:
	* gaupol/base/singleton.py:
	* gaupol/calculator.py:
	* gaupol/clipboard.py:
	* gaupol/const.py:
	* gaupol/converter.py:
	* gaupol/determiner.py:
	* gaupol/enclib.py:
	* gaupol/files/__init__.py:
	* gaupol/files/ssa.py:
	* gaupol/files/subfile.py:
	* gaupol/finder.py:
	* gaupol/gtk/agents/menu.py:
	* gaupol/gtk/agents/open.py:
	* gaupol/gtk/agents/update.py:
	* gaupol/gtk/app.py:
	* gaupol/gtk/cellrend/__init__.py:
	* gaupol/gtk/conf/__init__.py:
	* gaupol/gtk/const.py:
	* gaupol/gtk/dialogs/debug.py: