@@ -3,4 +3,5 @@
 # Run interactive tests with nose.
 # Usage: See nosetests --help.
 
+export LANG=C
 nosetests --match="^(Test|run)" "$@"
